--- a/sample.html
+++ b/sample.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="headerBar" className="styledDiv">
-        <h1 class="glassy">Welcome to Alumnet!😄</h1>
+        <h1 class="glassy">Welcome to Alumnet!</h1>
         <h2 class="glassy">A place where alumni and institutions meet.</h2>
     </div>
     <div class="horizontalFlexBox">
